--- a/application/extra/view/themes/bootstrap/status-solution.html
+++ b/application/extra/view/themes/bootstrap/status-solution.html
@@ -38,9 +38,9 @@
     <div class="alert alert-warning" role="alert" id="ce-info" style="display: none"></div>
 </div>
 
-<link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-light.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+
+<link href="https://cdn.bootcss.com/highlight.js/9.15.10/styles/atom-one-light.min.css" rel="stylesheet">
+<script src="https://cdn.bootcss.com/highlight.js/9.15.10/highlight.min.js"></script>
 
 <script type="text/javascript">
     $('pre code').each(function(i, block) {
