--- a/application/extra/view/themes/bootstrap/groups-my-creation.html
+++ b/application/extra/view/themes/bootstrap/groups-my-creation.html
@@ -15,7 +15,7 @@
 		<?php $group->fk(); ?>
 		<tr>
 			<td><a href="/group?id={$group->id}">{if 1 == $group->type}<span class="glyphicon glyphicon-lock text-danger"></span>&nbsp;{/if}{$group->name}</a></td>
-			<td>{$group->ownner_id}({$group->teacher->nick})</td>
+			<td>{$group->owner_id}({$group->teacher->nick})</td>
 			<td>
 				<a href="/group?id={$group->id}">{$lang.enter}</a>
 			</td>
