--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -69,22 +69,19 @@
                 <tbody>
                 <tr>
                     <th>服务器地址</th>
-                    <td>oj.ismdeep.com</td></tr>
+                    <td>https://oj.ismdeep.com</td></tr>
                 <tr>
                     <th>操作系统</th>
                     <td>Linux</td></tr>
-                <tr>
-                    <th>运行环境</th>
-                    <td>nginx/1.15.9</td></tr>
+<!--                <tr>-->
+<!--                    <th>运行环境</th>-->
+<!--                    <td>nginx/1.15.9</td></tr>-->
                 <tr>
                     <th>PHP版本</th>
-                    <td><?php echo PHP_VERSION;?></td></tr>
-                <tr>
-                    <th>PHP运行方式</th>
-                    <td>php-fpm</td></tr>
+                    <td>{$php_version}</td></tr>
                 <tr>
                     <th>MYSQL版本</th>
-                    <td>5.7.28</td></tr>
+                    <td>{$mysql_version}</td></tr>
                 <tr>
                     <th>ThinkPHP</th>
                     <td>{$thinkphp_version}</td></tr>
