feat: 登录、注册增加验证码

--- a/application/extra/view/themes/bootstrap/login.html
+++ b/application/extra/view/themes/bootstrap/login.html
@@ -27,6 +27,10 @@
         <hr class="hr15">
         <input name="password" id="password" lay-verify="required" placeholder="{$lang.password}"  type="password" class="layui-input">
         <hr class="hr15">
+        <input name="captcha" id="captcha" lay-verify="required" placeholder="{$lang.captcha}"  type="text" class="layui-input">
+        <hr class="hr15">
+        <img src="/captcha" alt="">
+        <hr class="hr15">
         <input value="{$lang.login}" lay-submit lay-filter="login" style="width:100%;" type="submit">
         <hr class="hr20" >
         <p style="text-align: right">
@@ -49,7 +53,8 @@
                 setTimeout(function(){
                     var loginData = {
                         'username': $('#username').val(),
-                        'password': $('#password').val()
+                        'password': $('#password').val(),
+                        'captcha': $('#captcha').val()
                     };
                     $.post('/api/login/login',loginData,function(d){
                         // layer.closeAll();
