--- a/application/extra/view/themes/bootstrap/register.html
+++ b/application/extra/view/themes/bootstrap/register.html
@@ -33,6 +33,10 @@
         <hr class="hr15">
         <input name="password" id="password-again" lay-verify="required" placeholder="{$lang.password_again}"  type="password" class="layui-input">
         <hr class="hr15">
+        <input name="captcha" id="captcha" lay-verify="required" placeholder="{$lang.captcha}"  type="text" class="layui-input">
+        <hr class="hr15">
+        <img src="/captcha" alt="">
+        <hr class="hr15">
         <input value="{$lang.register}" lay-submit lay-filter="register" style="width:100%;" type="submit">
         <hr class="hr20" >
         <p style="text-align: right">
