--- a/application/extra/view/themes/bootstrap/problems.html
+++ b/application/extra/view/themes/bootstrap/problems.html
@@ -36,8 +36,8 @@
 								{if 1 == $problem->solve_status}<span class="glyphicon glyphicon-hand-right" style="color: red"></span>{/if}
 								{if 2 == $problem->solve_status}<span class="glyphicon glyphicon-ok" style="color: green"></span>{/if}
 							</td>
-							<td><a href="/problem?id={$problem->problem_id}">{$problem->problem_id}</a></td>
-							<td><a href="/problem?id={$problem->problem_id}">{$problem->title}</a></td>
+							<td><a href="/problems/{$problem->problem_id}">{$problem->problem_id}</a></td>
+							<td><a href="/problems/{$problem->problem_id}">{$problem->title}</a></td>
 							<td>
 								<?php $flag = false;?>
 								{volist name="problem->tag_list" id="tag"}{if $flag}&nbsp;{/if}<span class="label label-primary"><a href="/problems?tag={$tag}" style="color: white;text-decoration-line: none">{$problem_tag_dict_map[$tag]}</a></span><?php $flag = true;?>{/volist}
