feat: 添加手动设置Solution的Result功能

--- a/application/admin/view/problem/files.html
+++ b/application/admin/view/problem/files.html
@@ -1,6 +1,6 @@
 {extend name="base" /}
 
-{block name='navpart'}{/block}
+{block name='nav_block'}{/block}
 
 {block name='content'}
 <div class="x-body">
