--- a/application/home/view/themes/bootstrap/contest-problem.html
+++ b/application/home/view/themes/bootstrap/contest-problem.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-contest/contest-layout" /}
-{block name='titlepart'}{$alphabet[$contest_problem->num]}:{$problem->title} - {$contest->title} - 江西理工大学在线测评系统{/block}
+{block name='title_block'}{$alphabet[$contest_problem->num]}:{$problem->title} - {$contest->title} - 江西理工大学在线测评系统{/block}
 {block name="body"}
 <script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
