--- a/application/home/view/themes/bootstrap/contest-rank.html
+++ b/application/home/view/themes/bootstrap/contest-rank.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-contest/contest-layout" /}
-{block name='titlepart'}{$lang['rank']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['rank']} - {$lang['justoj']}{/block}
 {block name='body'}
 <style media="screen">
 	.table > thead > tr > th,
