--- a/application/home/view/themes/bootstrap/group-members.html
+++ b/application/home/view/themes/bootstrap/group-members.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-group/group-layout" /}
-{block name='titlepart'}{$lang.members} - {$group->name}{/block}
+{block name='title_block'}{$lang.members} - {$group->name}{/block}
 {block name='body'}
 <?php $status_arr = array('未处理','已通过','已踢出'); ?>
 <div class="container">
