--- a/application/home/view/themes/bootstrap/layout/common.html
+++ b/application/home/view/themes/bootstrap/layout/common.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="JustOJ、江西理工大学在线测评系统、在线编程平台、只为提高你的编程水平。">
 	<meta name="keywords" content="ACM-ICPC,Online Judge,编程,C语言,C++,Java,Python,ACMer,JustOJ">
 	<link rel="shortcut icon" href="/favicon.gif" type="image/x-icon" />
-	<title>{block name='titlepart'}{$lang['welcome_to_justoj']}{/block}</title>
+	<title>{block name='title_block'}{$lang['welcome_to_justoj']}{/block}</title>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
 
 	<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -67,7 +67,7 @@
 	<a href="/upload/ismdeep/20180414/Firefox-ESR-full-latest.exe">FireFox浏览器</a>。</p>
 {/if}
 
-{block name="navpart"}
+{block name="nav_block"}
 <nav class="navbar navbar-default" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
