--- a/application/home/view/themes/bootstrap/status-rejudge.html
+++ b/application/home/view/themes/bootstrap/status-rejudge.html
@@ -1,6 +1,6 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name="navpart"}{/block}
-{block name='titlepart'}{$lang['status']} - {$lang['justoj']}{/block}
+{block name="nav_block"}{/block}
+{block name='title_block'}{$lang['status']} - {$lang['justoj']}{/block}
 {block name="body"}
 <div class="container" style="margin: 10px">
     <br>
