--- a/application/admin/view/layout/admin_common.html
+++ b/application/admin/view/layout/admin_common.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-{block name="navpart"}
+{block name="nav_block"}
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
