--- a/application/home/view/themes/bootstrap/contest-problems.html
+++ b/application/home/view/themes/bootstrap/contest-problems.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-contest/contest-layout" /}
-{block name='titlepart'}{$contest->title} - 江西理工大学在线测评系统{/block}
+{block name='title_block'}{$contest->title} - 江西理工大学在线测评系统{/block}
 {block name='body'}
 <div class="container">
 	<table class="table table-hover">
