--- a/application/home/view/themes/bootstrap/contest-status.html
+++ b/application/home/view/themes/bootstrap/contest-status.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-contest/contest-layout" /}
-{block name='titlepart'}{$lang['status']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['status']} - {$lang['justoj']}{/block}
 {block name='body'}
 <div class="container">
 	<form class="form-horizontal" action="/contest/Status" method="get">
