--- a/application/home/view/themes/bootstrap/contest.html
+++ b/application/home/view/themes/bootstrap/contest.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-contest/contest-layout" /}
-{block name='titlepart'}{$contest->title} - {$lang['justoj']}{/block}
+{block name='title_block'}{$contest->title} - {$lang['justoj']}{/block}
 {block name='body'}
 <div class="container">
 	<div class="jumbotron" style="margin-bottom: 10px; padding-top: 30px; padding-bottom: 30px">
