--- a/application/home/view/themes/bootstrap/group-join.html
+++ b/application/home/view/themes/bootstrap/group-join.html
@@ -1,6 +1,5 @@
 {extend name="home@themes/bootstrap/layout/common" /}
-{block name='navpart'}
-{/block}
+{block name='nav_block'}{/block}
 
 
 {block name='body'}
