--- a/application/home/view/themes/bootstrap/group-notifications.html
+++ b/application/home/view/themes/bootstrap/group-notifications.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-group/group-layout" /}
-{block name='titlepart'}{$lang.notifications} - {$group->name}{/block}
+{block name='title_block'}{$lang.notifications} - {$group->name}{/block}
 {block name='body'}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.9.2/ckeditor.js"></script>
 
