--- a/application/home/view/themes/bootstrap/group-tasks.html
+++ b/application/home/view/themes/bootstrap/group-tasks.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-group/group-layout" /}
-{block name='titlepart'}{$lang.tasks} - {$group->name}{/block}
+{block name='title_block'}{$lang.tasks} - {$group->name}{/block}
 {block name='body'}
 <script src="/static/laydate/laydate.js"></script>
 
