--- a/application/home/view/themes/bootstrap/group.html
+++ b/application/home/view/themes/bootstrap/group.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout-group/group-layout" /}
-{block name='titlepart'}{$group->name}{/block}
+{block name='title_block'}{$group->name}{/block}
 {block name='body'}
 <div class="container">
 	{$group->description}
