--- a/application/home/view/themes/bootstrap/groups.html
+++ b/application/home/view/themes/bootstrap/groups.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='titlepart'}{$lang['allgroup']} :: Welcome to JustOJ{/block}
+{block name='title_block'}{$lang['allgroup']} :: Welcome to JustOJ{/block}
 {block name="body"}
 <div class="container">
 	<form class="form-horizontal" action="/groups" method="get">
