--- a/application/home/view/themes/bootstrap/layout-group/group-layout.html
+++ b/application/home/view/themes/bootstrap/layout-group/group-layout.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/common" /}
-{block name="navpart"}
+{block name="nav_block"}
 <nav class="navbar navbar-default" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
