--- a/application/home/view/themes/bootstrap/rank.html
+++ b/application/home/view/themes/bootstrap/rank.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='titlepart'}{$lang['rank']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['rank']} - {$lang['justoj']}{/block}
 {block name="body"}
 <div class="container">
 	<table class="table table-hover">
