--- a/application/home/view/themes/bootstrap/status.html
+++ b/application/home/view/themes/bootstrap/status.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='titlepart'}{$lang['status']} - {$lang['justoj']}{/block}
+{block name='title_block'}{$lang['status']} - {$lang['justoj']}{/block}
 {block name="body"}
 <div class="container">
 	<form class="form-horizontal" action="/status" method="get">
