--- a/application/home/view/themes/bootstrap/user-info.html
+++ b/application/home/view/themes/bootstrap/user-info.html
@@ -1,5 +1,5 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name="titlepart"}{$user->nick} - {$lang['justoj']}{/block}
+{block name="title_block"}{$user->nick} - {$lang['justoj']}{/block}
 
 {block name="body"}
 <div class="container">
