--- a/application/home/view/themes/bootstrap/status-solution.html
+++ b/application/home/view/themes/bootstrap/status-solution.html
@@ -1,6 +1,6 @@
 {extend name="home@themes/bootstrap/layout/user" /}
-{block name='navpart'}{/block}
-{block name='titlepart'}{$lang['status']} - {$lang['justoj']}{/block}
+{block name='nav_block'}{/block}
+{block name='title_block'}{$lang['status']} - {$lang['justoj']}{/block}
 {block name="body"}
 <div class="container">
     <div id="info-panel">
@@ -24,7 +24,7 @@
                 <td id="solution-memory">{$solution->memory}</td>
                 <td id="solution-exe-time">{$solution->time}</td>
                 <td id="solution-code-language">{$solution->language_text}</td>
-                <td id="solution-submittime">{$solution->in_date}</td>
+                <td id="solution-submit-time">{$solution->in_date}</td>
             </tr>
             </tbody>
         </table>
