修改比赛页面访问体验：所有用户访问比赛权限均相同，比赛未开始前均无法查看比赛题目列表及内容

--- a/application/home/view/themes/bootstrap/contest.html
+++ b/application/home/view/themes/bootstrap/contest.html
@@ -159,7 +159,7 @@
         };
         $.post('/api/contest/auth',data,function(d){
             if ('success' == d.status) {
-                location.href = '/contest?id={$contest->contest_id}';
+                location.href = '/contests/{$contest->contest_id}';
             }else{
                 layer.alert(d.msg);
             }
